@@ -400,7 +400,20 @@ public abstract class ToolCommandlet extends Commandlet implements Tags {
   protected ToolInstallation createExistingToolInstallation(ToolInstallRequest request) {
 
     ToolEditionAndVersion installed = request.getInstalled();
-    return createExistingToolInstallation(installed.getEdition().edition(), installed.getResolvedVersion(), request.getProcessContext(),
+
+    String edition = this.tool;
+    VersionIdentifier resolvedVersion = VersionIdentifier.LATEST;
+
+    if (installed != null) {
+      if (installed.getEdition() != null) {
+        edition = installed.getEdition().edition();
+      }
+      if (installed.getResolvedVersion() != null) {
+        resolvedVersion = installed.getResolvedVersion();
+      }
+    }
+
+    return createExistingToolInstallation(edition, resolvedVersion, request.getProcessContext(),
         request.isAdditionalInstallation());
   }
 
